force-app/main/default/objects/Combined_Funnel__c/fields/Days_Billing_CW_to_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_CW_to_Activated__c</fullName>
    <description>V2_Dollars_First_Processed_Online_Date__c - Billing_Launch_Date__c (from the school object associated to the account)</description>
    <formula>V2_Dollars_First_Processed_Online_Date__c - Billing_Launch_Date__c</formula>
    <inlineHelpText>Number of days from Billing Launch Date to V2 Dollars First Processed Online Date from the School Object associated to the Account.</inlineHelpText>
    <label>Days Billing CW to Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>