force-app/main/default/objects/Combined_Funnel__c/fields/Days_Billing_CW_to_Fully_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Billing_CW_to_Fully_Activated__c</fullName>
    <description>Billing_Activated_Date__c -  Billing_Launch_Date__c (from the school object associated to the account)</description>
    <formula>Billing_Activated_Date__c -  Billing_Launch_Date__c</formula>
    <inlineHelpText>Number of days from Billing Launch Date to Billing Activated Date from the school object associated to the account.</inlineHelpText>
    <label>Days Billing CW to Fully Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>