force-app/main/default/objects/Combined_Funnel__c/fields/Days_Check_In_Call_to_Fully_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Check_In_Call_to_Fully_Activated__c</fullName>
    <description>Billing Activated Date - Billing Check-In Call Date (+Status = Complete)</description>
    <formula>IF(
   ISPICKVAL(Billing_Check_In_Call_Status__c, &apos;Complete&apos;),
Billing_Activated_Date__c -  Billing_Check_In_Call_Date__c,
NULL)</formula>
    <inlineHelpText>Number of days from Billing Check-In Call Date to Billing Activated Date if Billing Check-In Call Status = Complete.</inlineHelpText>
    <label>Days Check-In Call to Fully Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>