force-app/main/default/objects/Combined_Funnel__c/fields/Days_Initial_Call_to_Fully_Activated__c.field-meta.xml
<CustomField>
    <fullName>Days_Initial_Call_to_Fully_Activated__c</fullName>
    <description>Billing Activated Date - Billing Call or Webinar Date (+Status = Complete)</description>
    <formula>IF(
   ISPICKVAL(Billing_Call_or_Webinar_Status__c, &apos;Complete&apos;),
Billing_Activated_Date__c -  Billing_Call_or_Webinar_Date__c,
NULL)</formula>
    <inlineHelpText>Number of days from Billing Call or Webinar Date to Billing Activated Date if Billing Call or Webinar Status = Complete.</inlineHelpText>
    <label>Days Initial Call to Fully Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>