force-app/main/default/objects/Combined_Funnel__c/fields/Days_Since_Billing_Activation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Billing_Activation_Start_Date__c</fullName>
    <description>Number of days since the Billing Activation Start Date : TODAY() -  Billing_Activation_Start_Date__c</description>
    <formula>TODAY() -  Billing_Activation_Start_Date__c</formula>
    <inlineHelpText>Number of days since the Billing Activation Start Date</inlineHelpText>
    <label>Days Since Billing Activation Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>