force-app/main/default/objects/Combined_Funnel__c/fields/Days_Since_Billing_Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Billing_Onboarding_Start_Date__c</fullName>
    <description>TODAY() - Billing_Onboarding_Start_Date__c</description>
    <formula>TODAY() - Billing_Onboarding_Start_Date__c</formula>
    <inlineHelpText>Number of days since the Billing Onboarding Start Date</inlineHelpText>
    <label>Days Since Billing Onboarding Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>