force-app/main/default/objects/Combined_Funnel__c/fields/Days_Since_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closed_Won__c</fullName>
    <formula>TODAY() -  Original_Close_Date__c</formula>
    <inlineHelpText>Days since the Close Date on the SaaS Opportunity related to the Combined Funnel.</inlineHelpText>
    <label>Days Since Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>