force-app/main/default/objects/Combined_Funnel__c/fields/Days_to_Parent_Adoption_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Parent_Adoption_Threshold__c</fullName>
    <description>Days to Parent Adoption Threshold from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Days_to_Parent_Adoption_Threshold__c</formula>
    <inlineHelpText>Days to Parent Adoption Threshold from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Days to Parent Adoption Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>