force-app/main/default/objects/Combined_Funnel__c/fields/Days_to_SaaS_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_SaaS_Activation__c</fullName>
    <description>Days to SaaS Activation from the school object.</description>
    <formula>Account__r.School_Object__r.Days_to_SaaS_Activation__c</formula>
    <inlineHelpText>Number of days it took for the center to activate on SaaS. Days to SaaS Activation from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Days to SaaS Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>