force-app/main/default/objects/Combined_Funnel__c/fields/Days_to_Submitting_Verification__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Submitting_Verification__c</fullName>
    <description>Days to Submitting Verification from the School Object related to the CF&apos;s Account</description>
    <formula>Account__r.School_Object__r.Days_to_Submitting_Verification__c</formula>
    <inlineHelpText>Days to Submitting Verification from the School Object related to the CF&apos;s Account</inlineHelpText>
    <label>Days to Submitting Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>