force-app/main/default/objects/Combined_Funnel__c/fields/Declined_Billing_Training__c.field-meta.xml
<CustomField>
    <fullName>Declined_Billing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from CW Opp in flow.</description>
    <label>Declined Billing Training</label>
    <type>Checkbox</type>
</CustomField>