force-app/main/default/objects/Combined_Funnel__c/fields/Declined_Billing_Training_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Billing_Training_Reason__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Declined Billing Training Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Declined_Billing_Training_Reason</valueSetName>
    </valueSet>
</CustomField>