force-app/main/default/objects/Combined_Funnel__c/fields/Declined_SaaS_Training__c.field-meta.xml
<CustomField>
    <fullName>Declined_SaaS_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from SaaS Opps in CW flow. Can also be updated manually by activation reps.</description>
    <inlineHelpText>Mapped from CW SaaS Opps, can only be used by Sales if Onboarding Path = Site-Add AND the opportunity is related to an Account that is a Child Account (ie. an Account that has a Parent Account assigned).</inlineHelpText>
    <label>Declined SaaS Training</label>
    <type>Checkbox</type>
</CustomField>