force-app/main/default/objects/Combined_Funnel__c/fields/Documents_Created__c.field-meta.xml
<CustomField>
    <fullName>Documents_Created__c</fullName>
    <description>Number of documents and enrollment forms created all time. From the School Object related to the Account.</description>
    <formula>Account__r.School_Object__r.Documents_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of documents and enrollment forms created all time. From the School Object related to the Account.</inlineHelpText>
    <label>Documents Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>