force-app/main/default/objects/Combined_Funnel__c/fields/Dollars_Processed__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Processed__c</fullName>
    <description>Total dollars processed through billing - from School Object</description>
    <formula>Account__r.School_Object__r.Dollars_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total dollars processed through billing.</inlineHelpText>
    <label>Dollars Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>