force-app/main/default/objects/Combined_Funnel__c/fields/Engagement_Score_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_Last_7_Days__c</fullName>
    <formula>IF(
   Last_Onboarding_Zoom__c &gt;= TODAY()-7,
   +6,
   +0
   )
    +
IF(
   Last_Onboarding_Connected_Call__c &gt;= TODAY()-7,
   +4,
   +0
   )
    +
IF(
   Last_Onboarding_Text__c &gt;= TODAY()-7,
   +3,
   +0
   )
    +
IF(
   Last_Onboarding_Attempted_Call__c &gt;= TODAY()-7,
   +2,
   +0
   )
    +
IF(
   Last_Onboarding_Email__c &gt;= TODAY()-7,
   +1,
   +0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Score Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>