force-app/main/default/objects/Combined_Funnel__c/fields/Ever_Premium_ECE__c.field-meta.xml
<CustomField>
    <fullName>Ever_Premium_ECE__c</fullName>
    <formula>Account__r.Ever_Premium_ECE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ever Premium ECE</label>
    <type>Checkbox</type>
</CustomField>