force-app/main/default/objects/Combined_Funnel__c/fields/Fifth_Billing_Plan_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Billing_Plan_Set_Up_Date__c</fullName>
    <description>Date the fifth billing plan was set up on the School Object.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <formula>Account__r.School_Object__r.Fifth_Billing_Plan_Set_Up_Date__c</formula>
    <inlineHelpText>Date the fifth billing plan was set up on the School Object.</inlineHelpText>
    <label>x_Fifth Billing Plan Set Up Date</label>
    <type>Date</type>
</CustomField>