force-app/main/default/objects/Combined_Funnel__c/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <description>Mapped from CW Opp in Flow.</description>
    <inlineHelpText>Date the first payment will be paid for brightwheel premium</inlineHelpText>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>