force-app/main/default/objects/Combined_Funnel__c/fields/FTS_Owner__c.field-meta.xml
<CustomField>
    <fullName>FTS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FTS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Combined_Funnels</relationshipName>
    <type>Lookup</type>
</CustomField>