force-app/main/default/objects/Combined_Funnel__c/fields/FTS_Owner_Last_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>FTS_Owner_Last_Transfer_Date__c</fullName>
    <description>Updated in CF - Billing Ownership Updates flow. Date stamps any time the FTS Owner is changed on the CF record.</description>
    <inlineHelpText>Date the FTS Owner was last updated on the CF record.</inlineHelpText>
    <label>FTS Owner Last Transfer Date</label>
    <type>Date</type>
</CustomField>