force-app/main/default/objects/Combined_Funnel__c/fields/Future_Billing_Call_Score__c.field-meta.xml
<CustomField>
    <fullName>Future_Billing_Call_Score__c</fullName>
    <description>Score based on if any of the four billing call dates are in the future (ie. greater than or equal to today).</description>
    <formula>IF(
   OR(
      Billing_Call_or_Webinar_Date__c &gt;= TODAY(),
      Billing_Check_In_Call_Date__c &gt;= TODAY(),
      Billing_Extra_Help_Call_Date__c &gt;= TODAY(),
      Billing_Wrap_Call_Date__c &gt;= TODAY()
    ),
    -10, 0
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score based on if any of the four billing call dates are in the future (ie. greater than or equal to today).</inlineHelpText>
    <label>Future Billing Call Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>