force-app/main/default/objects/Combined_Funnel__c/fields/Grad_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Grad_Date_Override__c</fullName>
    <label>Grad Date Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>