force-app/main/default/objects/Combined_Funnel__c/fields/Grad_Date_Removal_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grad_Date_Removal_Approved_by_Manager__c</fullName>
    <inlineHelpText>Manually updated by onboarding managers for overrides</inlineHelpText>
    <label>Grad Date Removal Approved by Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>