force-app/main/default/objects/Combined_Funnel__c/fields/Grad_Date_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Grad_Date_Removal_Reason__c</fullName>
    <inlineHelpText>Reason for needing to override the center&apos;s Graduation date.</inlineHelpText>
    <label>Grad Date Removal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>