force-app/main/default/objects/Combined_Funnel__c/fields/Grad_Date_Removal_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Grad_Date_Removal_Reasoning__c</fullName>
    <inlineHelpText>Manually set by reps to show the reason for the grad date override</inlineHelpText>
    <label>Grad Date Removal Reasoning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date stamped due to old process</fullName>
            </value>
            <value>
                <fullName>Date stamped due to incorrect CE populated at CW</fullName>
            </value>
            <value>
                <fullName>Date stamped due to admin adding kids in wrong status too early</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>