force-app/main/default/objects/Combined_Funnel__c/fields/Handoff_Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Issue_Notes__c</fullName>
    <description>Stores notes related to the handoff issue(s) selected in the OB Handoff Issues field. (NA Sprint 15 &apos;23)</description>
    <label>Handoff Issue Notes</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>