force-app/main/default/objects/Combined_Funnel__c/fields/Increase_Parent_Adoption_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Increase_Parent_Adoption_Threshold_Met__c</fullName>
    <description>Increase Parent Adoption Threshold Met from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Increase_Parent_Adoption_Threshold_Met__c</formula>
    <inlineHelpText>Increase Parent Adoption Threshold Met from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Increase Parent Adoption Threshold Met</label>
    <type>Date</type>
</CustomField>