force-app/main/default/objects/Combined_Funnel__c/fields/Initial_OB_Kickoff_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_OB_Kickoff_Call_Scheduled_Date__c</fullName>
    <formula>Account__r.Initial_OB_Kickoff_Call_Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial OB Kickoff Call Scheduled Date</label>
    <type>Date</type>
</CustomField>