force-app/main/default/objects/Combined_Funnel__c/fields/Initial_Setup_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Completed__c</fullName>
    <description>Manually populated by reps after the first webinar or first SaaS 1:1 Onboarding Call.</description>
    <label>x_Initial Setup Call Completed</label>
    <type>Date</type>
</CustomField>