force-app/main/default/objects/Combined_Funnel__c/fields/Initial_Setup_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Scheduled__c</fullName>
    <description>Mapped from CW Opp in flow from SaaS 1:1 Onboarding Call field or Onboarding Webinar Date.</description>
    <label>x_Initial Setup Call Scheduled</label>
    <type>Date</type>
</CustomField>