force-app/main/default/objects/Combined_Funnel__c/fields/Initiate_Parent_Signups_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Parent_Signups_Threshold_Met__c</fullName>
    <description>Initiate Parent Signups Threshold Met from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Initiate_Parent_Signups_Threshold_Met__c</formula>
    <inlineHelpText>Initiate Parent Signups Threshold Met from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Initiate Parent Signups Threshold Met</label>
    <type>Date</type>
</CustomField>