force-app/main/default/objects/Combined_Funnel__c/fields/Invite_Parents_By__c.field-meta.xml
<CustomField>
    <fullName>Invite_Parents_By__c</fullName>
    <description>Mapped to SaaS onboarding in flow.</description>
    <inlineHelpText>Date the center should have parents invited by.</inlineHelpText>
    <label>Invite Parents By</label>
    <type>Date</type>
</CustomField>