force-app/main/default/objects/Combined_Funnel__c/fields/Invited_Parents_with_1_Login_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Invited_Parents_with_1_Login_Percentage__c</fullName>
    <formula>Account__r.School_Object__r.Invited_Parents_with_1_Login_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percent of guardians associated with an active student with 1+ login. Must be 55%.</inlineHelpText>
    <label>Invited Parents with 1+ Login Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>