force-app/main/default/objects/Combined_Funnel__c/fields/JG_Impersonate_Link__c.field-meta.xml
<CustomField>
    <fullName>JG_Impersonate_Link__c</fullName>
    <description>Quick link to the school&apos;s impersonation URL in JungleGym.</description>
    <formula>IF(
   NOT(ISBLANK(Account__r.School_Object__r.Brightwheel_Owner_UUID__c)),
   HYPERLINK(&apos;https://tools.mybrightwheel.com/admin/users/&apos; &amp; Account__r.School_Object__r.Brightwheel_Owner_UUID__c &amp; &apos;/impersonate&apos;, &apos;Impersonate&apos;),
   &apos;&apos;
)</formula>
    <inlineHelpText>Quick link to the school&apos;s impersonation URL in JungleGym.</inlineHelpText>
    <label>JG Impersonate Link</label>
    <type>Text</type>
</CustomField>