force-app/main/default/objects/Combined_Funnel__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date the last time an activity was logged - from School Object</description>
    <formula>Account__r.School_Object__r.Last_Action_Date__c</formula>
    <inlineHelpText>Date the last time an activity was logged.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>