force-app/main/default/objects/Combined_Funnel__c/fields/Last_CSAT_Survey_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_CSAT_Survey_Email__c</fullName>
    <description>Stores the email that was last used when attempting to send the OB CSAT survey</description>
    <label>Current CSAT Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>