force-app/main/default/objects/Combined_Funnel__c/fields/Last_Handoff_Issue_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Handoff_Issue_Update__c</fullName>
    <description>Stores the date of the most recent update to the OB Handoff Issues field. Populated by flow: CF - After Save - OB Handoff Slack</description>
    <label>Last Handoff Issue Date</label>
    <type>Date</type>
</CustomField>