force-app/main/default/objects/Combined_Funnel__c/fields/Last_Mobile_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Mobile_Activity_Date__c</fullName>
    <description>Date of last tracked mobile activity on a non student (teacher/admin). From the School Object related to the Account.</description>
    <formula>Account__r.School_Object__r.Last_Mobile_Activity_Date__c</formula>
    <inlineHelpText>Date of last tracked mobile activity on a non student (teacher/admin). From the School Object related to the Account.</inlineHelpText>
    <label>Last Mobile Activity Date</label>
    <type>Date</type>
</CustomField>